# cht_observations

./: environment.yml  pyproject.toml  sonar-project.properties
.github/workflows/: publish-to-pypi.yml  tests.yml
cht_observations/: __init__.py  _copernicus.py  _emodnet.py  _gesla.py  _grdc.py  _ioc.py  _ndbc.py  _noaa_coops.py  _station_source.py  _usgs.py  _waterinfo.py  observation_stations.py  utils.py
docs/: conf.py  getting_started.rst  index.rst
docs/api/: index.rst
docs/user_guide/: index.rst
examples/: example_noaa_coops.py
tests/: test_ndbc.py  test_noaa_coops.py  test_station_source.py
