[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cht_observations"
description = "Download tide gauge observation data"
readme = "README.md"
authors = [
    { name = "Julian Hofer", email = "Julian.Hofer@deltares.nl" },
    { name = "Sarwan Peiter", email = "Sarwan.Peiter@deltares.nl" },
]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.10"
dependencies = ["NDBC", "noaa_coops"]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest"]

[tool.setuptools]
zip-safe = true

[tool.setuptools.dynamic]
version = { attr = "cht_observations.__version__" }

[tool.setuptools.packages.find]
include = ["cht_observations"]

[tool.setuptools.package-data]
"cht_observations" = ["py.typed"]

# TODO
#[project.urls]
#Documentation = "https://deltares.github.io/Ribasim"
#Source = "https://github.com/Deltares/Ribasim"
